# one-person-ai

./: .env.example  .gitignore  README.md
api-service/: .env.example  Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
api-service/config/: settings.py
api-service/models/: __init__.py  auth.py  database.py  deepseek.py
api-service/routes/: __init__.py  auth.py  tools.py
deploy/: docker-compose.yml
deploy/api/: Dockerfile
deploy/frontend/: Dockerfile
deploy/mysql/: init.sql
deploy/worker/: Dockerfile
frontend/: Dockerfile  package.json
one-person-ai/: .dockerignore  CLAUDE.md  README.md
one-person-ai/api-service/: .env.example  Dockerfile  Dockerfile.local  main.py  pyproject.toml  requirements.txt  worker_client.py
one-person-ai/api-service/config/: settings.py
one-person-ai/api-service/middleware/: rate_limit.py
one-person-ai/api-service/models/: __init__.py  auth.py  database.py  deepseek.py
one-person-ai/api-service/protos/: worker_pb2.py  worker_pb2_grpc.py
one-person-ai/api-service/routes/: __init__.py  admin.py  auth.py  github_webhook.py  pr_review.py  tools.py  workflows.py
one-person-ai/api-service/services/: github.py  github_app.py
one-person-ai/api-service/tests/: conftest.py  test_auth.py  test_credits.py  test_tools_fallback.py  test_workflows.py
one-person-ai/deploy/: README.md  docker-compose.yml  quick-start.sh
one-person-ai/frontend/: .dockerignore  Dockerfile  pnpm.config.cjs
one-person-ai/protos/: worker.proto
one-person-ai/scripts/: gen_proto.sh
worker-service/: Dockerfile  go.mod
(+44 files in other folders)
