[tool.poetry]
name = "api-service"
version = "0.1.0"
description = "AI Tool Platform API Service"
authors = ["Founder <founder@one-person-co.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.0"
pymysql = "^1.1.0"
pydantic = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
openai = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
# 过滤第三方库的 deprecation 噪音(passlib/pydantic/sqlalchemy),保持输出干净
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
